--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-sdes is a simplified DES encryption/decryption example program written in python3.
+simple-des is a simplified DES encryption/decryption example program written in python3.
